# fastapi-demo

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: create_database.py  database.py
backend/app/filehandler/: temperatures.py
backend/app/models/: groundwater.py  temperatures.py
backend/app/routers/: groundwater.py  temperatures.py
backend/app/schemas/: groundwater.py  temperatures.py
frontend/: main.py  pyproject.toml
